--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: jensjepsen/growing-neural-cellular-automata
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
       - run: |
           cd frontend
+          npm install .
           npm run build
