--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,10 +7,16 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: jensjepsen/growing-neural-cellular-automata
+          path: cells
+      - uses: actions/checkout@v3
+        with:
+          path: blog
+      
       - uses: actions/setup-node@v3
         with:
           node-version: 16
       - run: |
-          cd frontend
+          cd cells/frontend
           npm install .
           npm run build
+      
