chore: work on actions

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,4 +19,5 @@ jobs:
           cd cells/frontend
           npm install .
           npm run build
-      
+          cp -r dist ../../public/dist
+          ls ../../public/dist
