chore: work on actions

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,19 @@
 name: Publish
-on: [push]
+on:
+  push:
+    branches: ["main"]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   Publish:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -11,7 +23,6 @@ jobs:
       - uses: actions/checkout@v3
         with:
           path: blog
-      
       - uses: actions/setup-node@v3
         with:
           node-version: 16
@@ -21,3 +32,14 @@ jobs:
           npm run build
           cp -r dist ../../public/dist
           ls ../../public/dist
+      - name: Setup Pages
+        uses: actions/configure-pages@v2
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: 'public/'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
+
+      
